[package]
name = "em_cache"
version = "0.1.0"
edition = "2021"
license-file="LICENSE"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3 

[dependencies]
embryo = { git = "ssh://git@github.com/EmergenceSystem/Embryo.git" }
em_filter = { git = "ssh://git@github.com/EmergenceSystem/em_filter.git", rev = "f465cfe" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
actix-web="4.0"
reqwest = "0.11"
redis = { version = "0.25", features = ["tokio-native-tls-comp"] }

[dev-dependencies]
